--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
         <div class="container">
             <div class="footer-flex__wrapper">
                 <div class="footer__logo_wrapper">
-                    <div class="footer__logo-icon_wrapper">
+                    <a href="./index.html" class="footer__logo-icon_wrapper">
                         <img src="./img/logo.svg" alt="" class="footer__logo-icon">
-                    </div>
+                    </a>
                     <div class="footer__logo-offer_wrapper">
                         <span class="footer__logo_text">
                             © Все права защищены
