--- a/success.html
+++ b/success.html
@@ -109,21 +109,27 @@
                             Заказ получен
                         </h2>
                     </div>
-                    <div class="header__link_wrapper">
-                        <a href="./index.html" class="header__link">
-                            Главная
-                        </a>
-                        <span class="border-hyphen">
-                        </span>
-                        <a href="./checkout.html" class="header__link">
-                            Оформление заказа
-                        </a>
-                        <span class="border-hyphen">
-                        </span>
-                        <a href="" class="header__link disabled">
-                            Заказ получен
-                        </a>
-                    </div>
+                    <ul class="header__link_list">
+                        <li class="header__link_item">
+                            <a href="./index.html" class="header__link">
+                                Главная
+                            </a>
+                        </li>
+                        <li class="border-hyphen">
+                        </li>
+                        <li class="header__link_item">
+                            <a href="#" class="header__link">
+                                Оформление заказа
+                            </a>
+                        </li>
+                        <li class="border-hyphen">
+                        </li>
+                        <li class="header__link_item">
+                            <a href="#" class="header__link disabled">
+                                Заказ получен
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
