--- a/one-item.html
+++ b/one-item.html
@@ -109,20 +109,27 @@
                             Свитшот Sweet Shot
                         </h2>
                     </div>
-                    <div class="header__link_wrapper">
-                        <a href="./index.html" class="header__link">
-                            Главная
-                        </a>
-                        <span class="border-hyphen">
-                        </span>
-                        <a href="" class="header__link">
-                            Свитшоты
-                        </a>
-                        <span class="border-hyphen"></span>
-                        <a href="" class="header__link disabled">
-                            Свитшот Sweet Shot
-                        </a>
-                    </div>
+                    <ul class="header__link_list">
+                        <li class="header__link_item">
+                            <a href="./index.html" class="header__link">
+                                Главная
+                            </a>
+                        </li>
+                        <li class="border-hyphen">
+                        </li>
+                        <li class="header__link_item">
+                            <a href="#" class="header__link">
+                                Свитшоты
+                            </a>
+                        </li>
+                        <li class="border-hyphen">
+                        </li>
+                        <li class="header__link_item">
+                            <a href="#" class="header__link disabled">
+                                Свитшот Sweet Shot
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
