--- a/shopTwo.html
+++ b/shopTwo.html
@@ -109,16 +109,20 @@
                             Магазин
                         </h2>
                     </div>
-                    <div class="header__link_wrapper">
-                        <a href="./index.html" class="header__link">
-                            Главная
-                        </a>
-                        <span class="border-hyphen">
-                        </span>
-                        <a href="" class="header__link disabled">
-                            Магазин
-                        </a>
-                    </div>
+                    <ul class="header__link_list">
+                        <li class="header__link_item">
+                            <a href="./index.html" class="header__link">
+                                Главная
+                            </a>
+                        </li>
+                        <li class="border-hyphen">
+                        </li>
+                        <li class="header__link_item">
+                            <a href="#" class="header__link disabled">
+                                Магазин
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
